*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version

1.9 preview 4 (2011-01-??)
 + New: Support for CustomWmsMapSource (experimental)
 + Download bandwidth limitation selectable for very fast network connections
 ! Highest zoom level missing in tile store coverage zoom selector  

1.9 preview 3 (2011-01-09)
 + New atlas format: PNG + Worldfile (PNG & PGW)
 ~ Atlas output format has to be chosen before adding maps
 ~ Disabling of unsupported tile processing options (regarding the current
    atlas format)
 ~ Enabled maps with ellipsoid projection for RMaps 

1.9 preview 2 (2010-12-18)
 + New atlas format: BackCountry Navigator
 + New atlas format: TwoNav (RMAP)
 + Multi-layer maps with more than two layers are now possible
 + New map source: OSM Hiking with relief and base 
 + New map source: Open Sea Map (sea layer joined with Mapnik) 
 + New atlas format: MGMaps/MyTrails (MGM)
 + New map source: Topomapper.com
 ~ Map sources are now packed into "MapPacks" which can be updated 
    without changing the main MOBAC program
 ~ Custom map sources are moved from settings.xml into separate xml files
    in the "mapsources" sub-directory
 ~ XML structure of multi-layer custom maps sources has changed
 + Multi-layer maps can now contain map sources that come with MOBAC
    This allows to combine existing map sources with new overlays.
 + BeanShell map sources can be used if placed in the "mapsources" 
    sub-directory
 + All direcories used by MOBAC can be pre-configured via file 
    directories.ini in the MOBAC program directory
 + CustomMap: new parameter: ignoreErrors and backGroundColor can have
    alpha transparency parameter
 + New map source: Cloudmade Map default style (1) 
 + Tile image format conversion for RMaps/BigPlanet/Galileo
 
 1.8 final: (2010-10-31)
 + New map source: New Zealand Topographic Maps
