@@ -1,5 +1,6 @@
-mobac.mapsources.mappacks.bing.MicrosoftMaps
-mobac.mapsources.mappacks.bing.MicrosoftMapsHillShade
-mobac.mapsources.mappacks.bing.MicrosoftVirtualEarth
-mobac.mapsources.mappacks.bing.MicrosoftHybrid
-mobac.mapsources.mappacks.bing.MicrosoftMapsChina
+mobac.mapsources.mappacks.misc_worldwide.ArcGISTopoMap
+mobac.mapsources.mappacks.misc_worldwide.ArcGISSatellite
+mobac.mapsources.mappacks.misc_worldwide.ArcGISStreetMap
+mobac.mapsources.mappacks.misc_worldwide.OviMaps
+mobac.mapsources.mappacks.misc_worldwide.Topomapper
+mobac.mapsources.mappacks.misc_worldwide.YahooMaps
